--- a/Blazepose/bodypose_detection_page.html
+++ b/Blazepose/bodypose_detection_page.html
@@ -12,7 +12,7 @@
         integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
-    <title>Body Pose Detection</title>
+    <title>Blaze Pose Detection</title>
 </head>
 
 <body>
@@ -38,7 +38,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <h1>Body Pose Detection</h1>
+                    <h1>Blaze Pose Detection</h1>
                     <h3>Module -- <span>Third Eye Project</span></h3>
                     <br>
                     <a href="#about" class="btn">Explore More</a>
@@ -51,7 +51,7 @@
         <section class="about" id="about">
             <div class="row">
                 <div class="content">
-                    <h3 class = "wow animate__animated animate__slideInLeft">About Body Pose Detection ?</h3>
+                    <h3 class = "wow animate__animated animate__slideInLeft">About Blaze Pose Detection ?</h3>
                     <p class = "wow animate__animated animate__slideInRight">Many people suffer from back pain or any type of body pain. They are told to do exercise 
                         for the recovery of that injury or that diseases. Everyone donot know at what angel a person 
                         should perform an exercise, so they do it in a wrong way or in a very dangerous way. This 
